fixed issue with overflow: hidden

--- a/src/pages/AlbumDetails.module.css
+++ b/src/pages/AlbumDetails.module.css
@@ -15,7 +15,7 @@
 }
 
 .detailsContainer * {
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .detailsContainer .square {
